<resources>
    <string name="app_name">Sample</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete All</string>
    <string name="update">Update</string>
    <string name="retrieve">Retrieve</string>
    <string name="no_item">初始化状态</string>
    <string name="noteText">Note Text</string>
    <string name="custom_insert">Custom Insert</string>
    <string name="text">Text</string>
    <string name="warn">Warn</string>
    <string name="note_null">"Note表为空"</string>
</resources>
