<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>
    <Button
        android:id="@+id/deleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteAll"/>
    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
    <Button
        android:id="@+id/retrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieve"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/noteText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/noteText"
            android:background="@color/white"
            android:layout_gravity="start|center_vertical"/>
        <RadioGroup
            android:id="@+id/noteType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/typeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/typeWarn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/warn"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/custom_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_insert"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_item"/>

    <!--<Button
        android:id="@+id/change_orientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="点击切换横屏"/>-->

</LinearLayout>